; ModuleID = '/home/carl/AnghaBench/reactos/dll/directx/wine/quartz/extr_filesource.c_byte_from_hex_char.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/directx/wine/quartz/extr_filesource.c_byte_from_hex_char.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8 (i32)* @byte_from_hex_char to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal zeroext i8 @byte_from_hex_char(i32 %0) #0 {
  %2 = alloca i8, align 1
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  %5 = call i32 @tolowerW(i32 %4)
  switch i32 %5, label %17 [
    i32 48, label %6
    i32 49, label %6
    i32 50, label %6
    i32 51, label %6
    i32 52, label %6
    i32 53, label %6
    i32 54, label %6
    i32 55, label %6
    i32 56, label %6
    i32 57, label %6
    i32 97, label %11
    i32 98, label %11
    i32 99, label %11
    i32 100, label %11
    i32 101, label %11
    i32 102, label %11
  ]

6:                                                ; preds = %1, %1, %1, %1, %1, %1, %1, %1, %1, %1
  %7 = load i32, i32* %3, align 4
  %8 = sub nsw i32 %7, 48
  %9 = and i32 %8, 15
  %10 = trunc i32 %9 to i8
  store i8 %10, i8* %2, align 1
  br label %18

11:                                               ; preds = %1, %1, %1, %1, %1, %1
  %12 = load i32, i32* %3, align 4
  %13 = sub nsw i32 %12, 97
  %14 = add nsw i32 %13, 10
  %15 = and i32 %14, 15
  %16 = trunc i32 %15 to i8
  store i8 %16, i8* %2, align 1
  br label %18

17:                                               ; preds = %1
  store i8 0, i8* %2, align 1
  br label %18

18:                                               ; preds = %17, %11, %6
  %19 = load i8, i8* %2, align 1
  ret i8 %19
}

declare dso_local i32 @tolowerW(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
